# xdg-desktop-portal-holo

./: README.md  REUSE.toml  meson.build  meson.options
LICENSES/: BSD-3-Clause.txt
data/: holo.portal.in  lockdown.conf  meson.build  org.freedesktop.impl.portal.desktop.holo.service.in  settings.conf  xdg-desktop-portal-holo.desktop.in  xdg-desktop-portal-holo.service.in
doc/: xdg-desktop-portal-holo-lockdown.rst  xdg-desktop-portal-holo-settings.rst
src/: appchooser.c  appchooser.h  email.c  email.h  lockdown.c  lockdown.h  meson.build  settings.c  settings.h  utils.c  utils.h  xdg-desktop-portal-holo.c
